# allmeca

./: .gitignore  README.md  pyproject.toml
prompts/: default.yml
src/allmeca/: action_parser.py  actions.py  bot.py  cli.py  logger.py  messages.py  processors.py  prompts.py  run_context.py  settings.py  ui.py  user_interaction.py
src/allmeca/actions/: __init__.py  base.py  create_file.py  run_bash.py
src/allmeca/callbacks/: manager.py  signals.py
src/allmeca/callbacks/handlers/: base.py  git_committer.py
src/allmeca/environments/: __init__.py  base.py  local.py
src/allmeca/models/: openai.py  openai_utils.py
src/allmeca/processors/: auto.py  human.py  reactions.py
